--- a/.gitmodules
+++ b/.gitmodules
@@ -48,3 +48,6 @@
 [submodule "Tools/flightgear_bridge"]
 	path = Tools/flightgear_bridge
 	url = https://github.com/PX4/PX4-FlightGear-Bridge.git
+[submodule "src/modules/px4_df_eskf"]
+	path = src/modules/px4_df_eskf
+	url = https://gitlab.com/Dmitry1977/px4_df_eskf.git
